WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287645
[WTF] Fix implicit conversion issue in enumNamesMax defaultMax calculation
https://bugs.webkit.org/show_bug.cgi?id=287645
Summary
[WTF] Fix implicit conversion issue in enumNamesMax defaultMax calculation
Yijia Huang
Reported
2025-02-13 10:58:52 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-13 10:59:03 PST
<
rdar://problem/144799887
>
Yijia Huang
Comment 2
2025-02-13 11:01:26 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40569
EWS
Comment 3
2025-02-13 11:07:57 PST
Committed
290354@main
(b4cf3790e795): <
https://commits.webkit.org/290354@main
> Reviewed commits have been landed. Closing PR #40569 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug