[WTF] Fix implicit conversion issue in enumNamesMax defaultMax calculation https://bugs.webkit.org/show_bug.cgi?id=287645 rdar://144799887

Reviewed by Chris Dumez.

Fixes an implicit conversion issue where assigning `UINT8_MAX` (255)
to `Underlying` (int8_t) caused an overflow, leading to an incorrect
value of `-1`.

Now explicitly casting `defaultMax` to `Underlying` to ensure that
signed types use `INT8_MAX` and unsigned types use `UINT8_MAX`
without unexpected wraparounds.

* Source/WTF/wtf/EnumTraits.h:
(WTF::enumNamesMax):

Canonical link: https://commits.webkit.org/290354@main